feat: activate @Audited AOP for declarative audit logging (#44)
Replace ~40 manual auditHelper.log() calls with @Audited annotations
across 8 admin services. Add AuditContext ThreadLocal for old/new
value capture, enhance @Audited with userIdFrom/entityIdFrom param
extraction, and rewrite AuditAspect with exception handling.